ide and tablature

--- a/cn/InProgress/ex0.tex
+++ b/cn/InProgress/ex0.tex
@@ -123,37 +123,30 @@ if you're trying to get something done and the platform is designed around
 a particular IDE, but for learning to code C (and many other languages) they
 are pointless.
 
-\begin{aside}{IDEs and Guitar Tablature}
+\begin{aside}{IDE和吉他谱}
 
-If you've played guitar then you know what tablature is, but for everyone else
-let me explain.  In music there's an established notation called the "staff
-notation".  It's a generic, very old, and universal way to write down what
-someone should play on an instrument.  If you play piano this notation is
-fairly easy to use, since it was created mostly for piano and composers.
+玩过吉他的人都知道吉他谱是什么东西，不过还是让我给其他没玩过吉他的人解释一下吧。有一种约定俗成
+的音乐记谱方式叫做“线谱”，这是一种普遍的，古老的，通用的记录如何演奏乐器的方法。线谱很大程度上
+是为钢琴和作曲家而生，所以如果你弹钢琴的话，线谱是很容易使用的。
 
-Guitar however is a weird instrument that doesn't really work with notation, so
-guitarists have an alternative notation called "tablature".  What tablature
-does is, rather than tell you the note to play, it tells you the fret and
-string you should play at that time.  You could learn whole songs without ever
-knowing about a single thing you're playing.  Many people do it this way, but
-if you want to know \emph{what} you're playing, then tablature is pointless.
+然而吉他这种乐器有些古怪，它并不适合这种记谱方式，所以演奏吉他的人使用了一种另类的记谱方式，称
+作“吉他谱（tablature）”。吉他谱告诉你的不是要演奏的音调，而是你在某一时刻要弹的指位和琴弦。你可
+以在不了解任何曲调的情况下学会弹奏一首曲子，很多人也是这么去学的。然而如果你想从中读出你弹奏的
+\emph{曲调}，吉他谱就没什么用处了。
 
-It may be harder than tablature, but traditional notation tells you how to play the
-\emph{music} rather than just how to play the guitar.  With traditional
-notation I can walk over to a piano and play the same song.  I can play it on a
-bass.  I can put it into a computer and design whole scores around it.  With
-tablature I can just play it on a guitar.
+传统的记谱方式也许比吉他谱难学，但它可以告诉你如何演奏\emph{音乐}，而不仅仅是如何弹吉他。拿着
+一份线谱，我可以走到一架钢琴前面弹出同样的一首歌曲，我可以用贝司把它弹出来，我还可以把它输入到
+计算机中重新设计整份乐谱。然而拿着吉他谱，我就只能用它弹弹吉他。
 
-IDEs are like tablature.  Sure, you can code pretty quickly, but you can only
-code in that one language on that one platform.  This is why companies love
-selling them to you.  They know you're lazy, and since it only works on their
-platform they've got you locked in because you are lazy.
+IDE和吉他谱类似。毫无疑问你可以使用IDE快速地写出代码，但你只能在一个固定的平台上使用一种特定的
+语言。这也是公司企业喜欢兜售这些东西给你的原因。他们知道你是个懒人，而IDE只在他们的平台上面工作，
+就这样，由于你的懒惰，他们就把你禁锢在他们的平台上了。
 
-The way you break the cycle is you suck it up and finally learn to code without
-an IDE.  A plain editor, or a programmer's editor like Vim or Emacs, makes you
-work with the code.  It's a little harder, but the end result is you can work
-with \emph{any} code, on any computer, in any language, and you know what's
-going on.
+打破这个循环的方法也不是没有，你需要卧薪尝胆，最终学会如何不使用IDE进行编程。简单的文本编辑器，
+或者像Vim和Emacs这样的程序员编辑器，会让代码真正成为你的工作对象。比起使用IDE来这样会更难一些，
+不过最终的结果就是你可以应对\emph{任何}代码，不管它在什么样的计算机平台上，不管它使用的是什么
+语言，而且你懂它的深层原理。
+
 \end{aside}
 
 
