--- a/cn/InProgress/ex0.tex
+++ b/cn/InProgress/ex0.tex
@@ -1,33 +1,19 @@
-\chapter{Exercise 0: The Setup}
+\chapter{习题 0: 准备工作}
 
-In this chapter you get your system setup to do C programming.  The
-good news for anyone using Linux or Mac OSX is that you are on a
-system designed \emph{for} programming in C.  The authors of the
-C language were also instrumental in the creation of the Unix operating
-system, and both Linux and OSX are based on Unix.  In fact, the install
-will be incredibly easy.
+本章你将学会架设 C 语言编程的系统环境。如果你使用的是 Linux 或者 Mac OSX，那么有个好消息可以
+告诉你，你的系统本来就是\emph{为} C 语言编程设计的。C 语言的发明人也曾是 Unix 操作系统的创作
+者，而 Linux 和 OSX 都是基于 Unix 的操作系统。所以，整个架设过程会非常简单。
 
-I have some bad news for users of Windows:  learning C on Windows
-is painful.  You can write C code for Windows, that's not a problem.
-The problem is all of the libraries, functions, and tools are just
-a little "off" from everyone else in the C world.  C came from
-Unix and is much easier on a Unix platform.  It's just a fact 
-of life that you'll have to accept I'm afraid.
+对于 Windows 的用户，我就只有坏消息了： 在 Windows 下学习 C 语言是一件痛苦的事情。在 Windows
+下写 C 语言代码不是问题，问题是 Windows 下所有的库、函数、以及工具和 Unix 下的 C 语言环境比
+起来就是有那么一点“跑偏”的感觉。恐怕这也是你不得不接受的事实了。
 
-I wanted to get this bad news out right away so that you don't
-panic.  I'm not saying to avoid Windows entirely.  I am however
-saying that, if you want to have the easiest time learning C, then
-it's time to bust out some Unix and get dirty.  This could also
-be really good for you, since knowing a little bit of Unix will
-also teach you some of the idioms of C programming and expand
-your skills.
+你也别被这条突如其来的坏消息吓到。我不是说要完全避开 Windows，我的意思是说，如果你想最不费力地
+学习C语言，那么你最好还是从 Unix 下手。了解一点 Unix 还有另外一个好处，那就是你可以学到一些 C
+语言的惯用技巧，从而扩展你的编程技术。
 
-This also means that for everyone you'll be using the 
-\emph{command line}.  Yep, I said it.  You've gotta get in there and
-type commands at the computer.  Don't be afraid though because
-I'll be telling you what to type and what it should look like,
-so you'll actually be learning quite a few mind expanding 
-skills at the same time.
+这也意味着你将会用到\emph{命令行}。没错，我是说命令行。你需要在命令行输入命令。不过别害怕，我会
+告诉你该输入什么命令，以及执行命令会有什么样的结果，这样你同时也会学到不少让你大开眼界的技能。
 
 \section{Linux}
 
