--- a/ex5.tex
+++ b/ex5.tex
@@ -39,7 +39,7 @@ exercises to understand each part better:
     \file{.h} extensions for "header" files, which then contain lists
     of functions you want to use in your program.
 \item[ex5.c:3] This is a multi-line \ident{comment} and you could put as many
-    lines of text between the \verb|/*| and closing \verb|*/| characters.
+    lines of text between the \verb|/*| and closing \verb|*/| characters as you want.
 \item[ex5.c:4] A more complex version of the \ident{main function} you've
     been using blindly so far.  How C programs work is the operating system
     loads your program, and then runs the function named \ident{main}.
