--- a/cn/InProgress/ex0.tex
+++ b/cn/InProgress/ex0.tex
@@ -1,41 +1,40 @@
 \chapter{习题 0: 准备工作}
 
-本章你将学会架设 C 语言编程的系统环境。如果你使用的是 Linux 或者 Mac OSX，那么有个好消息可以
-告诉你，你的系统本来就是\emph{为} C 语言编程设计的。C 语言的发明人也曾是 Unix 操作系统的创作
-者，而 Linux 和 OSX 都是基于 Unix 的操作系统。所以，整个架设过程会非常简单。
+本章你将学会架设 C 语言编程的系统环境。如果你使用的是 Linux 或者 Mac OSX，那么有个好消息
+可以告诉你，你的系统本来就是\emph{为} C 语言编程设计的。C 语言的发明人也曾是 Unix 操作
+系统的创作者，而 Linux 和 OSX 都是基于 Unix 的操作系统。所以，整个架设过程会非常简单。
 
-对于 Windows 的用户，我就只有坏消息了： 在 Windows 下学习 C 语言是一件痛苦的事情。在 Windows
-下写 C 语言代码不是问题，问题是 Windows 下所有的库、函数、以及工具和 Unix 下的 C 语言环境比
-起来就是有那么一点“跑偏”的感觉。恐怕这也是你不得不接受的事实了。
+对于 Windows 的用户，我就只有坏消息了： 在 Windows 下学习 C 语言是一件痛苦的事情。在 
+Windows 下写 C 语言代码不是问题，问题是 Windows 下所有的库、函数、以及工具和 Unix 下的
+C 语言环境比起来就是有那么一点“跑偏”的感觉。恐怕这也是你不得不接受的事实了。
 
-你也别被这条突如其来的坏消息吓到。我不是说要完全避开 Windows，我的意思是说，如果你想最不费力地
-学习C语言，那么你最好还是从 Unix 下手。了解一点 Unix 还有另外一个好处，那就是你可以学到一些 C
-语言的惯用技巧，从而扩展你的编程技术。
+你也别被这条突如其来的坏消息吓到。我不是说要完全避开 Windows，我的意思是说，如果你想最不
+费力地学习C语言，那么你最好还是从 Unix 下手。了解一点 Unix 还有另外一个好处，那就是你可以
+学到一些 C语言的惯用技巧，从而扩展你的编程技术。
 
-这也意味着你将会用到\emph{命令行}。没错，我是说命令行。你需要在命令行输入命令。不过别害怕，我会
-告诉你该输入什么命令，以及执行命令会有什么样的结果，这样你同时也会学到不少让你大开眼界的技能。
+这也意味着你将会用到\emph{命令行}。没错，我是说命令行。你需要在命令行输入命令。不过别害怕，
+我会告诉你该输入什么命令，以及执行命令会有什么样的结果，这样你同时也会学到不少让你大开眼界
+的技能。
 
 \section{Linux}
 
-On most Linux systems you just have to install a few packages.  For 
-Debian based systems, like Ubuntu you should just have to install
-a few things using these commands:
+对于大部分 Linux 系统来说，你只需要安装若干软件包就可以了。在基于 Debian 的系统（例如 
+Ubuntu）上面，你只要使用下面的命令安装即可：
 
-\begin{code}{Installing Requirements On Ubuntu}
+\begin{code}{在 Ubuntu 上面安装需求软件包}
 \begin{lstlisting}
 $ sudo aptitude install build-essential
 \end{lstlisting}
 \end{code}
 
-The above is an example of a command line prompt, so to get to where
-you can run that, find your "Terminal" program and run it first.  Then
-you'll get a shell prompt similar to the '\$' above and can type that
-command into it.  \emph{Do not type the '\$', just the stuff after it.}
+以上是一个命令行的例子，所以你要先找到系统里的“命令行终端（terminal）”并且把它运行起来，
+才能执行上述的命令。你会看到一个类似上面提到的 '\$' 的提示界面，然后键入上述命令。\emph{
+'\$' 这个符号是无需键入的，只要把后面的内容键入即可。}
 
 Here's how you would install the same setup on an RPM based Linux
 like Fedora:
 
-\begin{code}{Installing Requirements On Fedora}
+\begin{code}{在 Fedora 上面安装需求软件包}
 \begin{lstlisting}
 $ su -c yum groupinstall development-tools
 \end{lstlisting}
